fix: fix z-index ICD-802

--- a/src/Styles/components/_interested-shelf.scss
+++ b/src/Styles/components/_interested-shelf.scss
@@ -80,7 +80,7 @@ body {
 				&.not-show {
 					opacity: 0;
 					position: absolute;
-					z-index: 0;
+					z-index: -1;
 				}
 			}
 
